# minecraft_clone

./: CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: camera.cpp.6EB719A2C5C9199A.idx  camera.cpp.8345A81C36B309AE.idx  camera.hpp.B190D36751B55185.idx  chunck.cpp.3BD63514111C3A2A.idx  chunck.hpp.EC09F5922AC29A1C.idx  infinite_generator.cpp.8AB62B728DECB860.idx  infinite_generator.hpp.6431F393F9BF57B1.idx  main.cpp.32F6D8899BC167B4.idx  main.cpp.4B92D160E572926D.idx  mesh.cpp.4DA2DC5958773B52.idx  mesh.hpp.4CBD020EE791B314.idx  stb_image.cpp.BD88E6B287F09C9B.idx  stb_image.cpp.F840E32D3A870C8D.idx  stb_image.h.2FEB2DA81BDCD323.idx  terrain.cpp.124AB13B337DAD79.idx  terrain.hpp.BF0D5AE053A8D843.idx
shader/: frag.glsl  vert.glsl
src/: camera.cpp  chunck.cpp  infinite_generator.cpp  main.cpp  terrain.cpp
src/unused/: mesh.cpp
